--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     index index.php index.html;
+    server_name localhost;
+
     root /var/www/html/public;
 
     location / {
@@ -11,6 +13,10 @@ server {
         fastcgi_pass backend:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
