feat: update readme file update

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,3 +7,12 @@ RUN apt-get update && apt-get install -y \
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
+
+COPY ../backend/composer.json ../backend/composer.lock ./
+
+RUN composer install --no-dev --optimize-autoloader --no-interaction
+
+COPY ../backend .
+
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html/storage
